# pfl

./: .env.example  .gitignore  FOLLOW_UPS.md  PRODUCTION_SETUP.md  README.md  SESSION_HANDOFF.md  docker-compose.yml
backend/: Dockerfile  hashcode.py  postman_collection.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 411ef97d3c74_init.py  5c74ea68f52f_partial_unique_index_on_cases_loan_id_.py  81f348677516_m3_ingestion_tables.py  9270485d69ee_timestamptz_for_created_at_updated_at.py  a1b2c3d4e5f6_m4_case_wizard_fields.py  a8b9c0d1e2f3_add_deletion_request_fields.py  b2c3d4e5f6a7_m4_case_feedbacks.py  b2f148d48781_cases_and_case_artifacts_with_enums.py  b47f40f5fbcc_m5_decisioning_tables.py  b76286775dc9_initial_users_and_audit_log.py  b9c0d1e2f3a4_add_rule_overrides.py  c0d1e2f3a4b5_add_l55_dedupe_tvr_enum_value.py  c3d4e5f6a7b8_cam_discrepancy_resolutions.py  c4d5e6f7a8b9_4level_verification_l1.py  d1e2f3a4b5c6_add_mrp_catalogue_entries.py  d5e6f7a8b9c0_l1_5_credit_enum_value.py  e2f3a4b5c6d7_add_negative_area_pincodes.py  e6f7a8b9c0d1_l5_scoring_enum_value.py  f7a8b9c0d1e2_add_occupation_to_cases.py  f7c8d9e0a1b2_merge_negative_area_and_cam_discrepancy.py  g1h2i3j4k5l6_add_incomplete_autorun_log.py
backend/app/: cli.py  config.py  db.py  enums.py  main.py  startup.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py  security.py
backend/app/decisioning/: __init__.py  case_library.py  engine.py  mrp.py
backend/app/memory/: __init__.py  heuristics.md  loader.py  policy.yaml
backend/app/models/: __init__.py  audit_log.py  base.py  cam_discrepancy_resolution.py  case.py  case_artifact.py  case_extraction.py  case_feedback.py  checklist_validation_result.py  decision_result.py  decision_step.py  dedupe_match.py  dedupe_snapshot.py  incomplete_autorun_log.py  l1_extracted_document.py  level_issue.py  mrp_catalogue_entry.py  mrp_entry.py  negative_area_pincode.py  rule_override.py  system_cam_edit_request.py  user.py  verification_result.py
backend/app/schemas/: audit.py  auth.py  cam_discrepancy.py  case.py  decision.py  dedupe_snapshot.py  extraction.py  feedback.py  rule_override.py  user.py  validators.py  verification.py
backend/app/services/: audit.py  (+13 more)
backend/tests/: conftest.py  factories.py
(+392 files in other folders)
